Unrecognized preferences and color filters created in proprietary or older versions are discarded when saved
This issue was migrated from bug 8942 in our old bug tracker.
Original bug information:
Reporter: Cal Turney
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: 1.11.x (Experimental)
Attachments:
GNS138.patch: When prefs or color filters are saved, popup warnings are displayed.
: Screenshots of the popups
WS_v1.5.1_profile.zip: Profile created at v1.5.1
GNS138.patch: The version should be compatable with all platforms
prefs.c.patch: Patch addresses the segmentation fault Pascal's Debian Lenny box